# verifiers

environments/math_python/: math_python.py
environments/xbench_deepsearch/: README.md  pyproject.toml  xbench_deepsearch.py
verifiers/: __init__.py
verifiers/envs/: environment.py  multiturn_env.py  python_env.py  sandbox_env.py  tool_env.py
verifiers/rubrics/: monitor_rubric.py
